media/transmission/transmission.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: transmission
  labels:
    app: transmission
    app.kubernetes.io/name: transmission
spec:
  selector:
    app.kubernetes.io/name: transmission
  ports:
  - name: http
    port: 80
    targetPort: web
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transmission
spec:
  strategy:
    type: Recreate
  selector:
      matchLabels:
        app.kubernetes.io/name: transmission
  template:
    metadata:
      labels:
        app: transmission
        app.kubernetes.io/name: transmission
    spec:
      nodeSelector:
        storagespeed: slow
      containers:
      - name: transmission
        image: linuxserver/transmission
        volumeMounts:
        - name: transmission-config
          mountPath: /config
        - name: data
          subPath: downloads
          mountPath: /downloads
        - name: data
          subPath: watch
          mountPath: /watch
        resources:
          limits:
            cpu: 100m
            memory: 256Mi
        ports:
          - name: web
            containerPort: 9091
      - name: vpn
        image: dperson/openvpn-client
        livenessProbe:
          exec:
            command:
            - sh
            - -c
            - '[ "$(curl -s https://ifconfig.co/city)" != "Austin" ]'
          initialDelaySeconds: 30
          periodSeconds: 60
        volumeMounts:
          - name: vpn-config
            mountPath: /vpn
        securityContext:
          capabilities:
            add:
            - NET_ADMIN
        resources:
          requests:
            cpu: 100m
          limits:
            memory: 64Mi
      volumes:
        - name: transmission-config
          persistentVolumeClaim:
              claimName: transmission
        - name: data
          persistentVolumeClaim:
              claimName: media
        - name: vpn-config
          secret:
            secretName: vpn-config
